# mytidb-to-postgreSQL

./: .gitignore  Cargo.toml  Dockerfile
.github/workflows/: docker-build.yml
manifest/: manifest.yaml
migrations/2024-03-01-022915_rust_mysql_init/: down.sql  up.sql
src/: main.rs  model.rs  schema.rs
workflows/: docker-build.yml
