[package]
name = "mytidb-to-postgreSQL"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.4", features = ["mysql","postgres","chrono"] }
chrono = "0.4.34"
dotenv = "0.15.0"
bigdecimal = "0.4.2"